syntax = "proto3";
package particle;

service MPMStreamer {
    rpc RequestMPM (MPMRequest) returns (stream Particles);
}

message MPMRequest {
    double dt = 1;
    double gravity = 2;
    double dynamic_viscosity = 3;
    double alpha = 4;
    bool affine = 5;
    double space_width = 6;
    int32 grid_width = 7;
    int32 step_count = 8;
}

message Particles {
    repeated double x = 2;
    repeated double y = 3;
    repeated double vx = 5;
    repeated double vy = 6;
}